==> toniebox-reverse-engineering/teddycloud/cyclone/cyclone_crypto/hardware/msp432e4/msp432e4_crypto_hash.c <==
#define TRACE_LEVEL CRYPTO_TRACE_LEVEL
#include <stdint.h>
#include "msp432.h"
#include "inc/hw_shamd5.h"
#include "driverlib/types.h"
#include "core/crypto.h"
#include "hardware/msp432e4/msp432e4_crypto.h"
#include "hardware/msp432e4/msp432e4_crypto_hash.h"
#include "hash/hash_algorithms.h"
#include "debug.h"

void hashProcessData(const uint8_t *data, size_t length, uint8_t *digest,
   size_t digestSize)
{
   size_t i;
   uint32_t temp;

   //Specify the length
   SHAMD5->LENGTH = length;

   //Digest input data
   while(length >= 64)
   {
      //Wait for the SHA/MD5 engine to be ready to accept data
      while((SHAMD5->IRQSTATUS & SHAMD5_IRQSTATUS_INPUT_READY) == 0)
      {
      }

      //Write 64-byte block
      SHAMD5->DATA_0_IN = LOAD32LE(data);
      SHAMD5->DATA_1_IN = LOAD32LE(data + 4);
      SHAMD5->DATA_2_IN = LOAD32LE(data + 8);
      SHAMD5->DATA_3_IN = LOAD32LE(data + 12);
      SHAMD5->DATA_4_IN = LOAD32LE(data + 16);
      SHAMD5->DATA_5_IN = LOAD32LE(data + 20);
      SHAMD5->DATA_6_IN = LOAD32LE(data + 24);
      SHAMD5->DATA_7_IN = LOAD32LE(data + 28);
      SHAMD5->DATA_8_IN = LOAD32LE(data + 32);
      SHAMD5->DATA_9_IN = LOAD32LE(data + 36);
      SHAMD5->DATA_10_IN = LOAD32LE(data + 40);
      SHAMD5->DATA_11_IN = LOAD32LE(data + 44);
      SHAMD5->DATA_12_IN = LOAD32LE(data + 48);
      SHAMD5->DATA_13_IN = LOAD32LE(data + 52);
      SHAMD5->DATA_14_IN = LOAD32LE(data + 56);
      SHAMD5->DATA_15_IN = LOAD32LE(data + 60);

      //Advance data pointer
      data += 64;
      length -= 64;
   }

   //Process final block
   if(length > 0)
   {
      //Wait for the SHA/MD5 engine to be ready to accept data
      while((SHAMD5->IRQSTATUS & SHAMD5_IRQSTATUS_INPUT_READY) == 0)
      {
      }

      //Write final block
      for(i = 0; i < length; i += 4)
      {
         //Write 32-bit word
         HWREG(SHAMD5_BASE + SHAMD5_O_DATA_0_IN + i) = LOAD32LE(data);
         //Advance data pointer
         data += 4;
      }
   }

   //Wait for the output to be ready
   while((SHAMD5->IRQSTATUS & SHAMD5_IRQSTATUS_OUTPUT_READY) == 0)
   {
   }

   //Read the resulting output value
   for(i = 0; i < digestSize; i += 4)
   {
      temp = HWREG(SHAMD5_BASE + SHAMD5_O_IDIGEST_A + i);
      STORE32LE(temp, digest + i);
   }
}

void sha1Final(Sha1Context *context, uint8_t *digest)
{
   //Acquire exclusive access to the SHA/MD5 module
   osAcquireMutex(&msp432e4CryptoMutex);

   //Reset the SHA/MD5 module before use
   hashReset();

   //Configure the SHA/MD5 module
   SHAMD5->MODE = SHAMD5_MODE_ALGO_SHA1 | SHAMD5_MODE_CLOSE_HASH;

   //Restore hash context
   SHAMD5->IDIGEST_A = context->h[0];
   SHAMD5->IDIGEST_B = context->h[1];
   SHAMD5->IDIGEST_C = context->h[2];
   SHAMD5->IDIGEST_D = context->h[3];
   SHAMD5->IDIGEST_E = context->h[4];

   //Restore the value of the SHA_DIGEST_COUNT register
   SHAMD5->DIGEST_COUNT = context->totalSize;

   //Finish digest calculation
   hashProcessData(context->buffer, context->size, context->digest,
      SHA1_DIGEST_SIZE);

   //Release exclusive access to the SHA/MD5 module
   osReleaseMutex(&msp432e4CryptoMutex);

   //Copy the resulting digest
   if(digest != NULL)
   {
      osMemcpy(digest, context->digest, SHA1_DIGEST_SIZE);
   }
}

void sha256Final(Sha256Context *context, uint8_t *digest)
{
   //Acquire exclusive access to the SHA/MD5 module
   osAcquireMutex(&msp432e4CryptoMutex);

   //Reset the SHA/MD5 module before use
   hashReset();

   //Configure the SHA/MD5 module
   SHAMD5->MODE = SHAMD5_MODE_ALGO_SHA256 | SHAMD5_MODE_CLOSE_HASH;

   //Restore hash context
   SHAMD5->IDIGEST_A = context->h[0];
   SHAMD5->IDIGEST_B = context->h[1];
   SHAMD5->IDIGEST_C = context->h[2];
   SHAMD5->IDIGEST_D = context->h[3];
   SHAMD5->IDIGEST_E = context->h[4];
   SHAMD5->IDIGEST_F = context->h[5];
   SHAMD5->IDIGEST_G = context->h[6];
   SHAMD5->IDIGEST_H = context->h[7];

   //Restore the value of the SHA_DIGEST_COUNT register
   SHAMD5->DIGEST_COUNT = context->totalSize;

   //Finish digest calculation
   hashProcessData(context->buffer, context->size, context->digest,
      SHA256_DIGEST_SIZE);

   //Release exclusive access to the SHA/MD5 module
   osReleaseMutex(&msp432e4CryptoMutex);

   //Copy the resulting digest
   if(digest != NULL)
   {
      osMemcpy(digest, context->digest, SHA256_DIGEST_SIZE);
   }
}
